--- a/docs/data-model.asciidoc
+++ b/docs/data-model.asciidoc
@@ -252,9 +252,33 @@ For a full list of tracked metrics, see the relevant agent documentation:
 * {apm-ruby-ref-v}/metrics.html[Ruby]
 
 [float]
+===== Example system metric document
+
+This example shows what system metric documents can look like when indexed in {es}.
+
+[%collapsible]
+.Expand {es} document
+====
+
+This example contains JVM metrics produced by the {apm-java-agent}.
+and contains two related metrics: `jvm.gc.time` and `jvm.gc.count`. These are accompanied by various fields describing
+the environment in which the metrics were captured: service name, host name, Kubernetes pod UID, container ID, process ID, and more.
+These fields make it possible to search and aggregate across various dimensions, such as by service, host, and Kubernetes pod.
+
+[source,json]
+----
+include::./data/elasticsearch/metricset.json[]
+----
+====
+
+[float]
 ==== Calculated metrics
 
 APM agents and APM Server calculate metrics from trace events to power visualizations in the {apm-app}.
+
+Calculated metrics are an implementation detail and while we aim for stability for these data models,
+the dimensions and concrete limits for aggregations are subject to change within minor version updates.
+
 These metrics are described below.
 
 [float]
@@ -283,59 +307,136 @@ You can filter and group by these dimensions:
 --
 
 [float]
+===== Example breakdown metric document
+
+This example shows what breakdown metric documents can look like when indexed in {es}.
+
+[%collapsible]
+.Expand {es} document
+====
+
+[source,json]
+----
+include::./data/elasticsearch/span_breakdown.json[]
+----
+====
+
+[float]
 ===== Transaction metrics
 
 To power {kibana-ref}/xpack-apm.html[{apm-app}] visualizations,
 APM Server aggregates transaction events into latency distribution metrics.
 
-*`transaction.duration.histogram`*::
+*`transaction.duration.summary`* and *`transaction.duration.histogram`*::
 +
 --
-This metric measures the latency distribution of transaction groups,
-used to power visualizations and analytics in Elastic APM.
+These metrics represent the latency summary and latency distribution of transaction groups,
+used to power transaction-oriented visualizations and analytics in Elastic APM.
 
 These metric documents can be identified by searching for `metricset.name: transaction`.
 
 You can filter and group by these dimensions (some of which are optional, for example `container.id`):
 
-* `transaction.name`: The name of the transaction, for example `GET /`
-* `transaction.type`: The type of the transaction, for example `request`
-* `transaction.result`: The result of the transaction, for example `HTTP 2xx`
-* `transaction.root`: A boolean flag indicating whether the transaction is the root of a trace
-* `metricset.interval`: A string with the aggregation interval the metricset represents.
-* `event.outcome`: The outcome of the transaction, for example `success`
 * `agent.name`: The name of the {apm-agent} that instrumented the transaction, for example `java`
-* `service.name`: The name of the service that served the transaction
-* `service.version`: The version of the service that served the transaction
-* `service.node.name`: The name of the service instance that served the transaction
-* `service.environment`: The environment of the service that served the transaction
-* `service.language.name`: The language name of the service that served the transaction, for example `Go`
-* `service.language.version`: The language version of the service that served the transaction
-* `service.runtime.name`: The runtime name of the service that served the transaction, for example `jRuby`
-* `service.runtime.version`: The runtime version that served the transaction
-* `host.hostname`: The hostname of the service that served the transaction
-* `host.os.platform`: The platform name of the service that served the transaction, for example `linux`
-* `container.id`: The container ID of the service that served the transaction
-* `kubernetes.pod.name`: The name of the Kubernetes pod running the service that served the transaction
-* `cloud.provider`: The cloud provider hosting the service instance that served the transaction
-* `cloud.region`: The cloud region hosting the service instance that served the transaction
-* `cloud.availability_zone`: The cloud availability zone hosting the service instance that served the transaction
 * `cloud.account.id`: The cloud account id of the service that served the transaction
 * `cloud.account.name`: The cloud account name of the service that served the transaction
+* `cloud.availability_zone`: The cloud availability zone hosting the service instance that served the transaction
 * `cloud.machine.type`: The cloud machine type or instance type of the service that served the transaction
 * `cloud.project.id`: The cloud project identifier of the service that served the transaction
 * `cloud.project.name`: The cloud project name of the service that served the transaction
+* `cloud.provider`: The cloud provider hosting the service instance that served the transaction
+* `cloud.region`: The cloud region hosting the service instance that served the transaction
 * `cloud.service.name`: The cloud service name of the service that served the transaction
+* `container.id`: The container ID of the service that served the transaction
+* `event.outcome`: The outcome of the transaction, for example `success`
 * `faas.coldstart`: Whether the _serverless_ service that served the transaction had a cold start
-* `faas.trigger.type`: The trigger type that the lambda function was executed by of the service that served the transaction
 * `faas.id`: The unique identifier of the invoked serverless function
 * `faas.name`: The name of the lambda function
+* `faas.trigger.type`: The trigger type that the lambda function was executed by of the service that served the transaction
 * `faas.version`: The version of the lambda function
+* `host.hostname`: The detected hostname of the service that served the transaction
+* `host.name`: The user-defined name of the host or the detected hostname of the service that served the transaction
+* `host.os.platform`: The platform name of the service that served the transaction, for example `linux`
+* `kubernetes.pod.name`: The name of the Kubernetes pod running the service that served the transaction
 * `labels`: Key-value object containing string labels set globally by the APM agents.
+* `metricset.interval`: A string with the aggregation interval the metricset represents.
 * `numeric_labels`: Key-value object containing numeric labels set globally by the APM agents.
+* `service.environment`: The environment of the service that served the transaction
+* `service.language.name`: The language name of the service that served the transaction, for example `Go`
+* `service.language.version`: The language version of the service that served the transaction
+* `service.name`: The name of the service that served the transaction
+* `service.node.name`: The name of the service instance that served the transaction
+* `service.runtime.name`: The runtime name of the service that served the transaction, for example `jRuby`
+* `service.runtime.version`: The runtime version that served the transaction
+* `service.version`: The version of the service that served the transaction
+* `transaction.name`: The name of the transaction, for example `GET /`
+* `transaction.result`: The result of the transaction, for example `HTTP 2xx`
+* `transaction.root`: A boolean flag indicating whether the transaction is the root of a trace
+* `transaction.type`: The type of the transaction, for example `request`
 --
 
 The `@timestamp` field of these documents holds the start of the aggregation interval.
+
+[float]
+===== Example transaction document
+
+This example shows what transaction documents can look like when indexed in {es}.
+
+[%collapsible]
+.Expand {es} document
+====
+
+[source,json]
+----
+include::./data/elasticsearch/transaction_metric.json[]
+----
+====
+
+[float]
+===== Service-transaction metrics
+
+To power {kibana-ref}/xpack-apm.html[{apm-app}] visualizations,
+APM Server aggregates transaction events into service-transaction metrics.
+Service-transaction metrics are similar to transaction metrics, but they usually
+have a much lower cardinality as they have significantly fewer dimensions.
+The UI uses them when fewer details of the transactions are needed.
+
+*`transaction.duration.summary`* and *`transaction.duration.histogram`*::
++
+--
+These metrics represent the latency summary and latency distribution of service transaction groups,
+used to power service-oriented visualizations and analytics in Elastic APM.
+
+These metric documents can be identified by searching for `metricset.name: service_transaction`.
+
+You can filter and group by these dimensions:
+
+* `agent.name`: The name of the {apm-agent} that instrumented the operation, for example `java`
+* `labels`: Key-value object containing string labels set globally by the APM agents.
+* `metricset.interval`: A string with the aggregation interval the metricset represents.
+* `numeric_labels`: Key-value object containing numeric labels set globally by the APM agents.
+* `service.environment`: The environment of the service that made the request
+* `service.language.name`: The language name of the service that served the transaction, for example `Go`
+* `service.name`: The name of the service that made the request
+* `transaction.type`: The type of the enclosing transaction, for example `request`
+--
+
+The `@timestamp` field of these documents holds the start of the aggregation interval.
+
+[float]
+===== Example service-transaction document
+
+This example shows what service-transaction documents can look like when indexed in {es}.
+
+[%collapsible]
+.Expand {es} document
+====
+
+[source,json]
+----
+include::./data/elasticsearch/service_transaction_metric.json[]
+----
+====
 
 [float]
 ===== Service-destination metrics
@@ -354,20 +455,70 @@ These metric documents can be identified by searching for `metricset.name: servi
 
 You can filter and group by these dimensions:
 
-* `span.destination.service.resource`: The destination service resource, for example `mysql`
-* `span.name`: The name of the operation, for example `SELECT FROM table_name`.
-* `event.outcome`: The outcome of the operation, for example `success`
 * `agent.name`: The name of the {apm-agent} that instrumented the operation, for example `java`
-* `service.name`: The name of the service that made the request
+* `event.outcome`: The outcome of the operation, for example `success`
+* `labels`: Key-value object containing string labels set globally by the APM agents.
+* `metricset.interval`: A string with the aggregation interval the metricset represents.
+* `numeric_labels`: Key-value object containing numeric labels set globally by the APM agents.
 * `service.environment`: The environment of the service that made the request
+* `service.name`: The name of the service that made the request
 * `service.target.name`: The target service name, for example `customer_db`
 * `service.target.type`: The target service type, for example `mysql`
-* `metricset.interval`: A string with the aggregation interval the metricset represents.
-* `labels`: Key-value object containing string labels set globally by the APM agents.
-* `numeric_labels`: Key-value object containing numeric labels set globally by the APM agents.
+* `span.destination.service.resource`: The destination service resource, for example `mysql`
+* `span.name`: The name of the operation, for example `SELECT FROM table_name`.
 --
 
 The `@timestamp` field of these documents holds the start of the aggregation interval.
+
+[float]
+===== Example service-destination document
+
+This example shows what service-destination documents can look like when indexed in {es}.
+
+[%collapsible]
+.Expand {es} document
+====
+
+[source,json]
+----
+include::./data/elasticsearch/service_destination_metric.json[]
+----
+====
+
+[float]
+===== Service-summary metrics
+
+To power {kibana-ref}/xpack-apm.html[{apm-app}] visualizations,
+APM Server aggregates transaction, error, log, and metric events into service-summary metrics.
+
+These metric documents can be identified by searching for `metricset.name: service_summary`.
+
+You can filter and group by these dimensions:
+
+* `agent.name`: The name of the {apm-agent} that instrumented the operation, for example `java`
+* `labels`: Key-value object containing string labels set globally by the APM agents.
+* `metricset.interval`: A string with the aggregation interval the metricset represents.
+* `numeric_labels`: Key-value object containing numeric labels set globally by the APM agents.
+* `service.environment`: The environment of the service that made the request
+* `service.language.name`: The language name of the service that served the transaction, for example `Go`
+* `service.name`: The name of the service that made the request
+
+The `@timestamp` field of these documents holds the start of the aggregation interval.
+
+[float]
+===== Example service-summary document
+
+This example shows what service-summary documents can look like when indexed in {es}.
+
+[%collapsible]
+.Expand {es} document
+====
+
+[source,json]
+----
+include::./data/elasticsearch/service_summary_metric.json[]
+----
+====
 
 [float]
 ==== Data streams
@@ -379,24 +530,43 @@ include::./data-streams.asciidoc[tag=metrics-data-streams]
 See <<apm-data-streams>> to learn more.
 
 [float]
-==== Example metric document
+==== Aggregated metrics: limits and overflows
 
-This example shows what metric documents can look like when indexed in {es}.
+For all aggregated metrics, namely transaction, service-transaction, service-destination, and service-summary metrics,
+there are limits on the number of unique groups tracked at any given time.
 
-[%collapsible]
-.Expand {es} document
-====
+[float]
+===== Limits
 
-This example contains JVM metrics produced by the {apm-java-agent}.
-and contains two related metrics: `jvm.gc.time` and `jvm.gc.count`. These are accompanied by various fields describing
-the environment in which the metrics were captured: service name, host name, Kubernetes pod UID, container ID, process ID, and more.
-These fields make it possible to search and aggregate across various dimensions, such as by service, host, and Kubernetes pod.
+Note that all the below limits may change in the future with further improvements.
 
-[source,json]
-----
-include::./data/elasticsearch/metricset.json[]
-----
-====
+* For transaction metrics, the limits are 1000 services per GB of APM Server, and 5000 transaction
+groups per GB of APM Server. Additionally, each service may only consume up to 10% of the transaction groups,
+which is 500 transaction groups per service per GB of APM Server.
+* For service-transaction metrics, the limit is 1000 service transaction groups per GB of APM Server.
+* For service-destination metrics, the limit is a constant of 10000 service destination groups.
+* For service-summary metrics, the limit is 1000 service summary groups per GB of APM Server.
+
+[float]
+===== Overflows
+
+When a dimension has a high cardinality and exceeds the limit, the metrics will be aggregated
+under a dedicated overflow bucket.
+
+For example, when `transaction.name` has a lot of unique values and reaches the limit
+of unique transaction groups tracked, any transactions with new `transaction.name` will be aggregated under
+`transaction.name`: `_other`.
+
+Another example of how the transaction group limit may be reached is if `transaction.name` contains just a few unique values,
+but the service is deployed on a lot of different hosts. As `host.name` is part of the aggregation key for transaction metrics,
+the max transaction group limit is reached for a service that has 100 instances, 10 different transaction names, and
+4 transaction results per transaction name when connected to an APM Server with 8GB of RAM.
+Once this limit is reached, any new combinations of `transaction.name`, `transaction.result`, and
+`host.name` for that service will be aggregated under `transaction.name`: `_other`.
+
+This issue can be resolved by increasing memory available to APM Server, or by ensuring that the dimensions do not use values
+that are based on parameters that can change. For example, user ids, product ids, order numbers, query parameters, etc.,
+should be stripped away from the dimensions.
 
 // This heading is linked to from the APM UI section in Kibana
 [[data-model-metadata]]
