Fix OTel span type determinism
See https://github.com/elastic/apm-data/pull/53

--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -13,6 +13,7 @@ https://github.com/elastic/apm-server/compare/8.8\...main[View commits]
 ==== Bug fixes
 - Limit the amount of concurrent OTLP requests being processed in parallel {pull}10987[10987].
 - Added CA certificates bundle to the Docker images {pull}11015[11015]
+- Derivation of transaction and span type from OTLP spans is now deterministic {pull}11036[11036]
 
 [float]
 ==== Intake API Changes
