feat: backport changelog changes to 8.9 branch (#11048)
* changelog: update changelog for 8.9 release (#11044)

* changelog: update changelog for 8.9 release

* changelog: include 8.9 changelog

* changelog: add release-notes

* changelog: move changelog to the correct place

* changelog: remove empty sections from 8.9 changelog

* changelog: remove changelog head

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -1,4 +1,4 @@
-include::./changelogs/head.asciidoc[]
+include::./changelogs/8.9.asciidoc[]
 include::./changelogs/8.8.asciidoc[]
 include::./changelogs/8.7.asciidoc[]
 include::./changelogs/8.6.asciidoc[]
