--- a/docs/shared-docker.asciidoc
+++ b/docs/shared-docker.asciidoc
@@ -309,10 +309,7 @@ ifeval::["{beatname_lc}"!="auditbeat"]
 ["source", "dockerfile", subs="attributes"]
 --------------------------------------------
 FROM {dockerimage}
-COPY {beatname_lc}.yml /usr/share/{beatname_lc}/{beatname_lc}.yml
-USER root
-RUN chown root:{beatname_lc} /usr/share/{beatname_lc}/{beatname_lc}.yml
-USER {beatname_lc}
+COPY --chmod=0644 --chown=1000:1000 {beatname_lc}.yml /usr/share/{beatname_lc}/{beatname_lc}.yml
 --------------------------------------------
 
 endif::[]
