--- a/changelogs/7.17.asciidoc
+++ b/changelogs/7.17.asciidoc
@@ -3,6 +3,7 @@
 
 https://github.com/elastic/apm-server/compare/7.16\...7.17[View commits]
 
+* <<release-notes-7.17.11>>
 * <<release-notes-7.17.10>>
 * <<release-notes-7.17.9>>
 * <<release-notes-7.17.8>>
@@ -14,6 +15,14 @@ https://github.com/elastic/apm-server/compare/7.16\...7.17[View commits]
 * <<release-notes-7.17.2>>
 * <<release-notes-7.17.1>>
 * <<release-notes-7.17.0>>
+
+[float]
+[[release-notes-7.17.11]]
+=== APM version 7.17.11
+
+https://github.com/elastic/apm-server/compare/v7.17.10\...v7.17.11[View commits]
+
+No significant changes.
 
 [float]
 [[release-notes-7.17.10]]
