Add 8.8.2 release notes (#11099)
* docs: add 8.8.2 release notes

* Update changelogs/8.8.asciidoc

---------

Co-authored-by: Andrew Wilkins <axwalk@gmail.com>

--- a/changelogs/8.8.asciidoc
+++ b/changelogs/8.8.asciidoc
@@ -3,8 +3,19 @@
 
 https://github.com/elastic/apm-server/compare/8.7\...8.8[View commits]
 
+* <<release-notes-8.8.2>>
 * <<release-notes-8.8.1>>
 * <<release-notes-8.8.0>>
+
+[float]
+[[release-notes-8.8.2]]
+=== APM Server version 8.8.2
+
+https://github.com/elastic/apm-server/compare/v8.8.1\...v8.8.2[View commits]
+
+[float]
+==== Bug fixes
+- Added CA certificates bundle to the Docker images {pull}11015[11015]
 
 [float]
 [[release-notes-8.8.1]]
