--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -18,3 +18,4 @@ https://github.com/elastic/apm-server/compare/8.9\...main[View commits]
 [float]
 ==== Added
 - Add a self-instrumentation transaction to the source map periodic refresh action. {pull}11116[11116]
+- Add a self-instrumentation transaction to the agent config periodic refresh action. {pull}11129[11129]
