--- a/docs/getting-started-apm-server.asciidoc
+++ b/docs/getting-started-apm-server.asciidoc
@@ -305,15 +305,6 @@ See <<running-on-docker, Running on Docker>> for deploying Docker containers.
 [[apm-server-configuration]]
 ==== Step 2: Set up and configure
 
-[float]
-===== {ecloud}
-
-If you're running APM in Elastic cloud,
-see {cloud}/ec-manage-apm-settings.html[Add APM user settings] for information on how to configure Elastic APM.
-
-[float]
-===== Self installation
-
 // This content is reused in the upgrading guide
 // tag::why-apm-integration[]
 Starting in version 8.0.0, {fleet} uses the APM integration to set up and manage APM index templates,
@@ -321,13 +312,14 @@ Starting in version 8.0.0, {fleet} uses the APM integration to set up and manage
 // end::why-apm-integration[]
 
 [float]
-====== Install the APM integration
+===== Install the APM integration
 
 // This content is reused in the upgrading guide
 // tag::install-apm-integration[]
-NOTE: An internet connection is required to install the APM integration.
-If your environment has network traffic restrictions, there are ways to work around this requirement.
-See {fleet-guide}/air-gapped.html[Air-gapped environments] for more information.
+[%collapsible%open]
+.**If you have an internet connection**
+====
+An internet connection is required to install the APM integration via the {fleet} UI in {kib}.
 
 // lint ignore elastic-agent
 . Open {kib} and select **Add integrations** > **Elastic APM**.
@@ -335,10 +327,43 @@ See {fleet-guide}/air-gapped.html[Air-gapped environments] for more information.
 . Click **Add Elastic APM**.
 . Click **Save and continue**.
 . Click **Add Elastic Agent later**. You do not need to run an {agent} to complete the setup.
+====
+
+[%collapsible]
+.**If you don't have an internet connection**
+====
+If your environment has network traffic restrictions, there are other ways to install the APM integration.
+See {fleet-guide}/air-gapped.html[Air-gapped environments] for more information.
+
+Option 1: Update `kibana.yml`::
++
+Update `kibana.yml` to include the following, then restart {kib}.
++
+[source,yaml]
+----
+xpack.fleet.packages:
+- name: apm
+----
++
+See {kibana-ref}/settings.html[Configure Kibana] to learn more about how to edit the Kibana configuration file.
+
+Option 2: Use the {fleet} API::
++
+Use the {fleet} API to install the APM integration. To be successful, this needs to be run against the {kib}
+API, not the {es} API.
++
+["source","yaml",subs="attributes"]
+----
+POST kbn:/api/fleet/epm/packages/apm/{version}
+{ "force": true }
+----
++
+See {kibana-ref}/api.html[Kibana API] to learn more about how to use the Kibana APIs.
+====
 // end::install-apm-integration[]
 
 [float]
-====== Configure APM
+===== Configure APM
 
 Configure APM by editing the `apm-server.yml` configuration file.
 The location of this file varies by platform--see the <<directory-layout>> for help locating it.
